--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.mongodb:mongodb-driver:3.5.0'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
