--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+group 'org.jacoco'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 
@@ -12,4 +14,11 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.mongodb:mongodb-driver:3.5.0'
     compile 'com.google.code.gson:gson:2.2.4'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
 }
